; ModuleID = '/home/carl/AnghaBench/linux/drivers/acpi/acpica/extr_exutils.c_acpi_ex_acquire_global_lock.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/acpi/acpica/extr_exutils.c_acpi_ex_acquire_global_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ex_acquire_global_lock = common dso_local global i32 0, align 4
@AML_FIELD_LOCK_RULE_MASK = common dso_local global i32 0, align 4
@return_VOID = common dso_local global i32 0, align 4
@ACPI_WAIT_FOREVER = common dso_local global i32 0, align 4
@acpi_gbl_global_lock_mutex = common dso_local global i32 0, align 4
@AE_INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"Could not acquire Global Lock\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @acpi_ex_acquire_global_lock(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @ex_acquire_global_lock, align 4
  %5 = call i32 @ACPI_FUNCTION_TRACE(i32 %4)
  %6 = load i32, i32* %2, align 4
  %7 = load i32, i32* @AML_FIELD_LOCK_RULE_MASK, align 4
  %8 = and i32 %6, %7
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %12, label %10

10:                                               ; preds = %1
  %11 = load i32, i32* @return_VOID, align 4
  br label %12

12:                                               ; preds = %10, %1
  %13 = load i32, i32* @ACPI_WAIT_FOREVER, align 4
  %14 = load i32, i32* @acpi_gbl_global_lock_mutex, align 4
  %15 = call i32 (...) @acpi_os_get_thread_id()
  %16 = call i32 @acpi_ex_acquire_mutex_object(i32 %13, i32 %14, i32 %15)
  store i32 %16, i32* %3, align 4
  %17 = load i32, i32* %3, align 4
  %18 = call i64 @ACPI_FAILURE(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %12
  %21 = load i32, i32* @AE_INFO, align 4
  %22 = load i32, i32* %3, align 4
  %23 = call i32 @ACPI_EXCEPTION(i32 ptrtoint ([30 x i8]* @.str to i32))
  br label %24

24:                                               ; preds = %20, %12
  %25 = load i32, i32* @return_VOID, align 4
  ret void
}

declare dso_local i32 @ACPI_FUNCTION_TRACE(i32) #1

declare dso_local i32 @acpi_ex_acquire_mutex_object(i32, i32, i32) #1

declare dso_local i32 @acpi_os_get_thread_id(...) #1

declare dso_local i64 @ACPI_FAILURE(i32) #1

declare dso_local i32 @ACPI_EXCEPTION(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
